--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "angularx-qrcode": "^17.0.0",
     "express": "^4.19.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
